# nova-rs

./: .env  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: cargo.toml
app/: Cargo.toml
app/examples/: jwt.rs
app/src/: lib.rs  main.rs  route.rs  telemetry.rs
conf/: dev.yml  local.yml  uat.yml
crates/access-http/: Cargo.toml
crates/access-http-types/: Cargo.toml
crates/access-http-types/src/: lib.rs  misc.rs  passport.rs
crates/access-http/src/: app_error.rs  error.rs  handlers.rs  lib.rs  openapi.rs  route.rs
crates/access-http/src/handlers/: misc.rs  passport.rs
crates/app_error/: Cargo.toml
crates/app_error/src/: lib.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: app.rs  configuration.rs  db.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: deploy.rs
crates/dal/: Cargo.toml  build.rs
crates/dal/src/: enums.rs  lib.rs  log_login.rs
crates/dal/src/model/: dev_gen_table.rs  dev_gen_table_column.rs  device.rs  device_alarm.rs  device_group.rs  device_service_log.rs  edge.rs  edge_point.rs  gallery_group.rs  gallery_image.rs  job.rs  job_log.rs  log_login.rs  log_oper.rs  mod.rs  prelude.rs  product.rs  product_category.rs  product_ota.rs  product_schema.rs  product_tsl_issued.rs  rule_chain.rs  rule_chain_log.rs  screen.rs  screen_group.rs  screen_template.rs  screen_three.rs  series_event.rs  series_log.rs  series_ts_kv.rs  sys_api.rs  sys_config.rs  sys_dict_item.rs  sys_dict_type.rs  sys_excel.rs  sys_excel_log.rs  sys_feature.rs  sys_menu.rs  sys_menu_api.rs  sys_notice.rs  (+18 more)
crates/entity/: Cargo.toml
crates/handlers/: Cargo.toml
crates/handlers/src/: lib.rs  misc.rs  passport.rs  swagger.rs
crates/middlewares/: Cargo.toml
crates/readiness/: Cargo.toml
crates/readiness/src/: app_state.rs
crates/types/: Cargo.toml
crates/types/src/: constant.rs  error.rs  lib.rs  pagination.rs  responded.rs
nova/: Cargo.toml
nova/src/: main.rs  telemetry.rs
