[workspace]
resolver = "2"
members = [
    "app",
    # "testing",
    "crates/configuration",
    "crates/handlers",
    "crates/middlewares",
    "crates/entity",
    "crates/types",
    "crates/core",
]
default-members = [
    "app",
    # "testing",
]

[workspace.package]
version = "0.1.0-rc0"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "nova-rs is an admin backend."
keywords =[
    "backend"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/nova-rs"
repository = "https://github.com/thinkgos/nova-rs"

# [workspace.build-dependencies]

# [workspace.dev-dependencies]

[workspace.dependencies]
# web
axum = "0.8"
jsonwebtoken = "10"

# runtime
tokio = { version = "1.0", features = ["full"] }

# utilities
rand = "0.9"
bytes = "1.10"
config = "0.15"
secrecy = {version = "0.10", features = ["serde"]}
strum = {version = "0.27", features = ["derive"]}

# error 
anyhow = "1"
thiserror = "2"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# tracing
log = "0.4"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
# tracing-actix-web = "0.7"

# swagger
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# orm
sea-orm = {version = "1", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros"]}
sea-query = "0.32"


[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
