[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
configuration = {path = "../crates/configuration"}

tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
