[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dev-dependencies]
bcrypt.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true

[dependencies]
configuration = { path = "../crates/configuration" }
handlers = { path = "../crates/handlers" }
types = { path = "../crates/types" }
app_error = { path = "../crates/app_error" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ulid.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
