[package]
name = "access-http-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true

utoipa.workspace = true

[lints]
workspace = true
