[package]
name = "access-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
types = { path = "../types" }
access-http-types = { path = "../access-http-types" }
configuration = { path = "../configuration" }
readiness = { path = "../readiness" }
dal = { path = "../dal" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

utoipa-swagger-ui.workspace = true
utoipa.workspace = true

sea-orm.workspace = true

serde.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ulid.workspace = true

[lints]
workspace = true
