[package]
name = "app_error"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true


[lints]
workspace = true
