[package]
name = "configuration"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
core = {path = "../core"}

serde.workspace = true
secrecy.workspace = true
anyhow.workspace = true
config.workspace = true
log.workspace = true

[lints]
workspace = true
