[package]
name = "dal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
utoipa-config.workspace = true


[dependencies]
serde.workspace = true
sea-orm.workspace = true
utoipa.workspace = true
chrono.workspace = true
strum.workspace = true
serde_repr.workspace = true

[lints]
workspace = true
