[package]
name = "handlers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
types = {path = "../types"}

utoipa-swagger-ui.workspace = true
utoipa.workspace = true

axum.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true

[lints]
workspace = true
