[package]
name = "readiness"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
configuration = { path = "../configuration" }

sea-orm.workspace = true
secrecy.workspace = true
log.workspace = true

[lints]
workspace = true
